# lem_in_42

./: CMakeLists.txt  Makefile  README.md  map  map2  map3
includes/: lem_in.h
libft/: Makefile  author  ft_atoi.c  ft_bzero.c  ft_isascii.c  ft_isdigit.c  ft_itoa.c  ft_lstdelone.c  ft_lstiter.c  ft_lstnpoint.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_strequ.c  ft_striter.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strlowcase.c  ft_strmapi.c  ft_strncat.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strsplit.c  ft_strstr.c  ft_strsub.c  ft_strtrim.c  (+4 more)
libft/ft_printf/: Makefile
libft/ft_printf/includes/: ft_printf.h
libft/ft_printf/sources/: additional.c  additional2.c  buffer.c  conver_parts.c  convercions.c  convert_bin_frac_part.c  convert_mantiss.c  div_mod_l.c  div_mod_l_2.c  fill_e_end.c  fill_res.c  ft_printf.c  get_totallen.c  itoa2.c  length.c  long_operation.c  long_operation_2.c  parser.c  print_b.c  print_format_csp.c  print_g.c  print_int.c  print_int2.c  print_int_part.c  print_ox.c  print_ox2.c  print_u.c  round_line.c  save_frac_part.c  save_frac_part_e.c  save_int_part_e.c  solve_e.c  solve_f.c  some_function.c  start.c
libft/includes/: ft_printf.h
libft/srcs/: ft_atoi.c  ft_isalnum.c  ft_isalpha.c  ft_isprint.c  ft_lst_contentsearch.c  ft_lst_size.c  ft_lstadd.c  ft_lstdel.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memmove.c  ft_memset.c  ft_putnbr.c  ft_putstr.c  ft_sort_wordtab.c  ft_str_reverse.c  ft_strclr.c  ft_strcpy.c  ft_strdel.c  ft_striteri.c  ft_strmap.c  ft_strncpy.c  ft_strnequ.c  ft_strnew.c  ft_strsplit.c  ft_strupcase.c  get_next_line.c
sources/: additional.c  main.c  malloc.c  save.c  save_way.c  solve.c
sources/init/: additional.c  free.c  free2.c  main.c  malloc.c  malloc2.c  param.c  print_result.c  save.c  save_links.c  save_rooms.c
sources/solve/: combine_ways.c  copy_paths.c  extra_func.c  extra_path.c  ford_bellman.c  free.c  march_of_ants.c  node_dividing.c  print_anthill.c  restore_node.c  save_way.c  seacrh_way.c  solve.c  sort_paths.c
