cmake_minimum_required(VERSION 3.15)
project(together_lem_in C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(libft)
include_directories(libft/ft_printf/includes)

add_executable(together_lem_in
        includes/lem_in.h
        libft/ft_printf/includes/ft_printf.h
        libft/ft_printf/sources/additional.c
        libft/ft_printf/sources/additional2.c
        libft/ft_printf/sources/buffer.c
        libft/ft_printf/sources/conver_parts.c
        libft/ft_printf/sources/convercions.c
        libft/ft_printf/sources/convert_bin_frac_part.c
        libft/ft_printf/sources/convert_mantiss.c
        libft/ft_printf/sources/div_mod_l.c
        libft/ft_printf/sources/div_mod_l_2.c
        libft/ft_printf/sources/fill_e_end.c
        libft/ft_printf/sources/fill_res.c
        libft/ft_printf/sources/ft_printf.c
        libft/ft_printf/sources/get_totallen.c
        libft/ft_printf/sources/itoa2.c
        libft/ft_printf/sources/length.c
        libft/ft_printf/sources/long_operation.c
        libft/ft_printf/sources/long_operation_2.c
        libft/ft_printf/sources/parser.c
        libft/ft_printf/sources/print_b.c
        libft/ft_printf/sources/print_format_csp.c
        libft/ft_printf/sources/print_g.c
        libft/ft_printf/sources/print_int.c
        libft/ft_printf/sources/print_int2.c
        libft/ft_printf/sources/print_int_part.c
        libft/ft_printf/sources/print_ox.c
        libft/ft_printf/sources/print_ox2.c
        libft/ft_printf/sources/print_u.c
        libft/ft_printf/sources/round_line.c
        libft/ft_printf/sources/save_frac_part.c
        libft/ft_printf/sources/save_frac_part_e.c
        libft/ft_printf/sources/save_int_part_e.c
        libft/ft_printf/sources/solve_e.c
        libft/ft_printf/sources/solve_f.c
        libft/ft_printf/sources/some_function.c
        libft/ft_printf/sources/start.c
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_itoa.c
        libft/ft_lst_contentsearch.c
        libft/ft_lst_size.c
        libft/ft_lstadd.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_lstnpoint.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_sort_wordtab.c
        libft/ft_str_reverse.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strlowcase.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_strupcase.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/get_next_line.c
        libft/libft.h
        sources/init/additional.c
        sources/init/main.c
        sources/init/malloc.c
        sources/init/save.c
        sources/solve/combine_ways.c
        sources/solve/extra_func.c
        sources/solve/extra_path.c
        sources/solve/ford_bellman.c
        sources/solve/free.c
        sources/solve/march_of_ants.c
        sources/solve/node_dividing.c
        sources/solve/restore_node.c
        sources/solve/save_way.c
        sources/solve/seacrh_way.c
        sources/solve/solve.c)
